reference-project/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
# deployment v1
metadata:
  # metadata labels - tags under which this resources can be found in k8s api
  labels:
    app: demo-quarkus
    app.kubernetes.io/name: demo-quarkus
  name: demo-quarkus
  namespace: default
spec:
  # scale to 2 instances
  replicas: 2
  selector:
    #how are the pods linked together
    matchLabels:
      app: demo-quarkus
  template:
    metadata:
      labels:
        app: demo-quarkus
    spec:
      # pod spec, we want a single container in our pods
      containers:
        - name: demo-quarkus
          # where should the image come from
          image: 'k3d-registry.localhost:5000/demo-quarkus:latest'
          # always perform pull when creating pod
          imagePullPolicy: Always
          # env vars so we can connect to DB
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 3
      # we can define init containers, single run jobs that run before our main container does
      # we use them to init database and check that its ready
